[package]
name = "lyre-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
env_logger = "0.10"
flac = "0.5"
hound = "3.5"
jack = "0.11"
log = "0.4"
rayon = "1"
sofiza = "0.3"
wmidi = "4"
